[gd_scene load_steps=8 format=3 uid="uid://dk4ylnny2ppv8"]

[ext_resource type="Script" uid="uid://dpj4kbt2cmckp" path="res://Scripts/Components/Variation/VariationBlock.gd" id="1_0r8q3"]
[ext_resource type="PackedScene" uid="uid://bt1rm762l3yt7" path="res://Scenes/Components/DataBlock.tscn" id="1_203jy"]
[ext_resource type="Script" uid="uid://crfo1a3tynisp" path="res://Scripts/Components/LinearOptionButton.gd" id="4_cykvh"]
[ext_resource type="PackedScene" uid="uid://coa5jjimu3uqn" path="res://Scenes/Components/Buttons/MoveButton.tscn" id="5_keehy"]
[ext_resource type="PackedScene" uid="uid://qhgbpavbrsf" path="res://Scenes/Components/Buttons/DeleteButton.tscn" id="5_nfbih"]
[ext_resource type="Texture2D" uid="uid://dv3gbpl2qy2md" path="res://Assets/Buttons/Down.png" id="6_8pshb"]
[ext_resource type="StyleBox" uid="uid://carddjnmd6blo" path="res://Resources/Style Boxes/StyleBoxEmpty.tres" id="9_33c7r"]

[node name="VariationBlock" node_paths=PackedStringArray("icon", "variation_dropdown", "custom_variation_input", "component_menu") instance=ExtResource("1_203jy")]
script = ExtResource("1_0r8q3")
is_root = false
icon = NodePath("VBox/Header/Icon")
variation_dropdown = NodePath("VBox/Header/Variations")
custom_variation_input = NodePath("VBox/Header/CustomVariation")
component_menu = NodePath("VBox/Contents/ComponentMenu")

[node name="Icon" type="TextureRect" parent="VBox/Header" index="0"]
layout_mode = 2
stretch_mode = 2

[node name="Variations" type="OptionButton" parent="VBox/Header" index="1"]
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
icon_alignment = 2
fit_to_longest_item = false
script = ExtResource("4_cykvh")
metadata/_custom_type_script = "uid://crfo1a3tynisp"

[node name="CustomVariation" type="LineEdit" parent="VBox/Header" index="2"]
visible = false
layout_mode = 2
size_flags_vertical = 0
expand_to_text_length = true

[node name="Spacer" type="Control" parent="VBox/Header" index="3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoveUpButton" parent="VBox/Header" index="4" node_paths=PackedStringArray("node_to_move") instance=ExtResource("5_keehy")]
layout_mode = 2
size_flags_vertical = 0
node_to_move = NodePath("../../..")
index_limit = 1

[node name="MoveDownButton" parent="VBox/Header" index="5" node_paths=PackedStringArray("node_to_move") instance=ExtResource("5_keehy")]
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Move Down"
texture_normal = ExtResource("6_8pshb")
node_to_move = NodePath("../../..")
direction = 1

[node name="DeleteButton" parent="VBox/Header" index="8" instance=ExtResource("5_nfbih")]
layout_mode = 2
size_flags_vertical = 0

[node name="CollapseButton" parent="VBox/Header" index="9" node_paths=PackedStringArray("nodes_to_hide")]
nodes_to_hide = [NodePath("../../Contents"), NodePath("../Icon")]

[node name="ComponentMenu" type="ItemList" parent="VBox/Contents" index="0"]
layout_mode = 2
focus_mode = 0
theme_override_styles/panel = ExtResource("9_33c7r")
auto_width = true
auto_height = true
item_count = 4
item_0/text = "Add Variation Branch"
item_1/text = "Add Source"
item_2/text = "Add Link"
item_3/text = "Add Random Branch"

[connection signal="item_selected" from="VBox/Header/Variations" to="." method="select_variation"]
[connection signal="text_changed" from="VBox/Header/CustomVariation" to="." method="custom_variation_changed"]
[connection signal="deletion_confirmed" from="VBox/Header/DeleteButton" to="." method="queue_free"]
[connection signal="item_selected" from="VBox/Contents/ComponentMenu" to="." method="add_component"]
